tests/paczka1/fuzzy1/42413322.err
Error in line 1: A797 A797 35,1
Error in line 3: 7xUuE A797 98,8
Error in line 4: LKfzqL A797 24,9
Error in line 17: LKfzqL S70 71,4
Error in line 26: LKfzqL S257 83,1
Error in line 27: LKfzqL A687 8,0
Error in line 24: A797 S70 99,6
Error in line 23: 2fXs S257 77,2
Error in line 33: 2fXs A687 7,1
Error in line 34: n8AC99 S70 67,6
